# netbubbles

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  example.py  pylintrc  pyproject.toml
.github/workflows/: publish.yml
docs/: examples.md  usage.md
examples/: 01_basic_network.py  02_focus_layout.py  03_bilayer_layout.py  04_weighted_edges.py  05_adjacency_matrix.py  06_custom_style.py  07_liana_preset.py  08_subgraph_filter.py  09_multipanel.py  10_merge_nodes.py  11_citation_network.py  12_dependencies.py  13_pipeline.py  14_webgraph.py  15_social_network.py  generate_all.py
netbubbles/: __init__.py  _compat.py  graph.py  layout.py  render.py  style.py
netbubbles/presets/: __init__.py  _common.py  citations.py  dependencies.py  liana.py  pipeline.py  social.py  webgraph.py
netbubbles/render/: __init__.py  arrows.py  background.py  edges.py  geometry.py  legend.py  nodes.py  title.py
tests/: test_graph.py  test_layout.py  test_render.py  test_style.py
