[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "netbubbles"
version = "0.1.0"
description = "Directed bubble-graph visualisation with curved arrows"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
