[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "netbubbles"
version = "0.2.1"
description = "Directed bubble-graph visualisation with curved arrows"
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-SA-4.0"
authors = [
    { name = "dam2452" },
]
keywords = [
    "graph-visualization",
    "network",
    "bubble-graph",
    "directed-graph",
    "matplotlib",
    "cell-communication",
    "citation-network",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
presets = ["pandas>=2.0"]
dev = [
    "pytest>=7",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/dam2452/netbubbles"
Issues = "https://github.com/dam2452/netbubbles/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbubbles*"]
